<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCQo0hGB4Wbb7r59_vuqQ5Aksk6MM8_St0</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required</string>
    <string name="location_permission_denied">Location service denied</string>
    <string name="permission_required_toast">Location permission is required</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <!-- Bottom Navigation Menu -->
    <string name="map">Map View</string>
    <string name="resto_list">List View</string>
    <string name="workmates_list">Workmates</string>

    <!-- Navigation Drawer Menu -->
    <string name="restaurant">Your Lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Search Bar -->
    <string name="search_title">Search restaurant</string>

    <!-- Detail Activity -->
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>


    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>

    <!-- LOGIN ACTIVITY -->
    <string name="main_activity_description">Find a nice restaurant and invite your colleagues for lunch!</string>
    <string name="login">Connexion</string>
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Search a restaurant</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="check_box_is_mentor">Etes-vous un mentor ?</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">2071780099763574</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb2071780099763574</string>

    <!-- TWITTER PURPOSE -->
    <string name="twitter_consumer_key" translatable="false"> 5hOInEl4se2tBwGOCvSg8ydXo</string>
    <string name="twitter_consumer_secret" translatable="false">UWJ9zwJPG4mtyfXakWEZhae7T8Gkg9FDl5eOxLhu5igvPnD3P7</string>

</resources>
