<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_restaurant"
            android:icon="@drawable/ic_restaurant_menu_white_24dp"
            android:title="@string/restaurant" />
        <item
            android:id="@+id/activity_main_drawer_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/activity_main_drawer_logout"
            android:icon="@drawable/ic_power_settings_new_white_24dp"
            android:title="@string/logout" />
    </group>
</menu>