<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.LoginActivity">

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/blurred_restaurant">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/ic_restaurant_menu_white_24dp"
            android:layout_margin="@dimen/large_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/login_title_size"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textSize="@dimen/login_text_size"
            android:text="@string/main_activity_description"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/margin"
            android:gravity="center"/>

        <Button
            android:id="@+id/login_activity_login_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/login_text_size"
            android:background="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/margin"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>