<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controllers.activities.SettingsActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/large_margin">

            <!-- FIREBASE IMAGE -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"/>

            <!-- PROGRESS BAR -->
            <ProgressBar
                android:id="@+id/profile_activity_progress_bar"
                android:layout_width="@dimen/large_margin"
                android:layout_height="@dimen/large_margin"
                android:visibility="invisible"
                android:layout_margin="@dimen/large_margin"/>

            <!-- PROFILE IMAGE -->
            <ImageView
                android:id="@+id/profile_activity_imageview_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/blurred_restaurant"/>

        </LinearLayout>


        <!-- PROFILE USERNAME -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/profile_activity_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/text_input_username"
            android:layout_margin="@dimen/margin"/>

        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_email"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <!-- PROFILE EMAIL -->
            <TextView
                android:id="@+id/profile_activity_text_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/margin"/>

        </LinearLayout>
    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_weight="1">

        <!-- BUTTON UPDATE USERNAME -->
        <Button
            android:id="@+id/settings_activity_button_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_update_account"
            android:textColor="#fff"
            android:textSize="@dimen/text_size"
            android:background="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/margin"/>

        <!-- BUTTON DELETE ACCOUNT -->
        <Button
            android:id="@+id/settings_activity_button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_delete_account"
            android:textColor="#fff"
            android:textSize="@dimen/text_size"
            android:background="@color/colorPrimaryDark"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/margin"/>

    </LinearLayout>

</LinearLayout>